Add LATAM languages support (#10)
* Add pt-br langauge support

* Add spanish language support

* Translate alert texts

- Add multi-language support for alert strings on controller.
- Add localized TOS site.
- Refactor and lint some code.
- Extend alert messages from JTOS search to ITOS search.

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,17 +6,18 @@
     },
     "FOOTER": {
         "RELOAD": "RELOAD",
-        "SCROLL_TO_TOP": "GO TOP",
-        "OPEN_OFFICIAL_SITE": "OPEN JTOS SITE"
+        "SCROLL_TO_TOP": "BACK TO TOP",
+        "OPEN_OFFICIAL_SITE": "GO TO OFFICIAL SITE"
     },
     "SETTINGS": {
-        "NEED_UPDATE": "You need update!!",
+        "NEED_UPDATE": "Update needed!",
         "DOWNLOAD": "Download",
-        "CONFIGURE_FOLDER": "Configure your settings below. Please specify your Tree of Savior install directory.",
+        "CONFIGURE_FOLDER": "Configure your settings below. Please specify your Tree of Savior install directory path.",
         "OPEN_FOLDER_BROWSE_DIALOG": "Browse...",
-        "INVALID_FOLDER": "Invalid directory. Please set your proper Tree of Savior directory before continuing.",
+        "INVALID_FOLDER": "Invalid directory. Please set a proper Tree of Savior directory before continuing.",
         "INSTALLATION_HISTORY": "Installation History:",
-        "CLEAR": "CLEAR!!"
+        "CLEAR": "CLEAR!!",
+        "CLEAR_DEFAULT_ERROR": "Initialize error: Couldn't find required file."
     },
     "BROWSE": {
         "SEARCH": "Search",
@@ -36,6 +37,11 @@
         "CLOSE_README": "Close",
         "INSTALL": "Install",
         "UPDATE": "Update",
-        "UNINSTALL": "Uninstall"
+        "UNINSTALL": "Uninstall",
+        "UPDATE_LIST_SUCCESS": " has been updated.",
+        "UPDATE_LIST_BLANK": "There are no addons to update."
+    },
+    "TOS": {
+      "SITE_URL": "https://treeofsavior.com"
     }
 }
