add korea translation

--- a/locales/en.json
+++ b/locales/en.json
@@ -8,7 +8,7 @@
         "RELOAD": "RELOAD",
         "SCROLL_TO_TOP": "BACK TO TOP",
         "OPEN_OFFICIAL_SITE": "GO TO OFFICIAL SITE",
-        "TRANSLATE_DESCRIPTION":"DOES TRANSLATE DESCRIPTION?"
+        "TRANSLATE_DESCRIPTION": "DESCRIPTION TRANSLATION"
     },
     "SETTINGS": {
         "NEED_UPDATE": "Update needed!",
